# OV7670

./: CMakeLists.txt  README.md
PCB/: OV7670 pico board.kicad_pcb  OV7670 pico board.kicad_pro  OV7670 pico board.kicad_sch
PCB/Output/: OV7670 pico board-B_Cu.gbr  OV7670 pico board-B_Mask.gbr  OV7670 pico board-B_Paste.gbr  OV7670 pico board-B_Silkscreen.gbr  OV7670 pico board-Edge_Cuts.gbr  OV7670 pico board-F_Cu.gbr  OV7670 pico board-F_Mask.gbr  OV7670 pico board-F_Paste.gbr  OV7670 pico board-F_Silkscreen.gbr  OV7670 pico board-NPTH.drl  OV7670 pico board-PTH.drl  OV7670 pico board-job.gbrjob
Terminal/: SerialServer.py  SerialServerDevInterface.html  index.html  rendering.js  scripts.js  serial.js  ui.js
lib/: CMakeLists.txt  OV7670.c  OV7670.h  SCCB.c  command.c  command.h  helpers.c  helpers.h  ring_buf.c  ring_buf.h
src/: CMakeLists.txt  main.c  notes.txt
src/Misc/: i2ctest.c  myCode.c  myCode2.c
src/Misc2/: main2.c
